--- a/practice_lesson3.html
+++ b/practice_lesson3.html
@@ -5,6 +5,12 @@
     width: 110px;
     height: 36px;
     border: none;
+    transition: opacity 0.15s;
+  }
+
+  .uber:hover {
+    opacity: 0.85;
+    cursor: pointer;
   }
 
   .amazon_cart {
@@ -14,6 +20,16 @@
     border: none;
     border-radius: 15px;
     margin-right: 12px;
+    transition: background-color 0.15s;
+  }
+
+  .amazon_cart:hover {
+    background-color: rgb(240, 203, 18);
+    cursor: pointer;
+  }
+
+  .amazon_cart:active {
+    opacity: 0.6;
   }
 
   .amazon_buy {
@@ -22,10 +38,25 @@
     height: 30px;
     border: none;
     border-radius: 15px;
+    transition: background-color 0.15s;
+  }
+
+  .amazon_buy:hover {
+    background-color: rgb(236, 151, 24);
+    cursor: pointer;
+  }
+
+  .amazon_buy:active {
+    opacity: 0.6;
   }
 
   .amazon_back {
     color: rgb(0, 113, 133);
+  }
+
+  .amazon_back:hover {
+    color: orangered;
+    cursor: pointer;
   }
 
   .nike {
@@ -46,6 +77,13 @@
     width: 80px;
     height: 33px;
     font-weight: bold;
+    margin-bottom: 10px;
+    transition: box-shadow 0.15s;
+  }
+
+  .github:hover {
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
   }
 
   .bootstrap_start {
@@ -57,6 +95,12 @@
     border-radius: 3px;
     font-weight: bold;
     margin-right: 6px;
+    transition: background-color 0.15s;
+  }
+
+  .bootstrap_start:hover {
+    background-color: rgb(105, 69, 109);
+    cursor: pointer;
   }
 
   .bootstrap_download {
@@ -67,6 +111,13 @@
     width: 100px;
     border-radius: 3px;
     font-weight: bold;
+    transition: background-color 0.15s, color 0.15s;
+  }
+
+  .bootstrap_download:hover {
+    background-color: rgb(108, 117, 125);
+    color: white;
+    cursor: pointer;
   }
 
   .linkedin_apply {
@@ -78,6 +129,12 @@
     border-radius: 17px;
     font-weight: bold;
     margin-right: 6px;
+    transition: background-color 0.15s;
+  }
+
+  .linkedin_apply:hover {
+    background-color: rgb(9, 73, 138);
+    cursor: pointer;
   }
 
   .linkedin_save {
@@ -88,6 +145,13 @@
     width: 72px;
     border-radius: 17px;
     font-weight: bold;
+    transition: border 0.05s, background-color 0.05s;
+  }
+
+  .linkedin_save:hover {
+    border: solid 2px rgb(10, 102, 194);
+    background-color: rgb(204, 230, 255);
+    cursor: pointer;
   }
 </style>
 
