--- a/buttons.html
+++ b/buttons.html
@@ -3,12 +3,16 @@
     background-color: rgb(200, 0, 0);
     color: white;
     border: none;
-    height: 36px;
-    width: 105px;
-    border-radius: 3px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    margin-left: 20px;
     transition: opacity 0.15s;
+    vertical-align: top;
   }
 
   .subscribe-button:hover {
@@ -22,18 +26,20 @@
   .join-button {
     background-color: white;
     color: rgb(41, 118, 211);
-    border-color: rgb(41, 118, 211);
+    border-color: rgb(6, 95, 212);
     border-style: solid;
     border-width: 1px;
-    height: 36px;
-    width: 62px;
     border-radius: 2px;
     cursor: pointer;
     transition: background-color 0.15s, color 0.15s;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   .join-button:hover {
-    background-color: rgb(41, 118, 211);
+    background-color: rgb(6, 95, 212);
     color: white;
   }
 
@@ -42,7 +48,7 @@
   }
 
   .tweet-button {
-    background-color: rgb(2, 158, 255);
+    background-color: rgb(29, 155, 240);
     color: white;
     border: none;
     height: 36px;
@@ -53,6 +59,7 @@
     cursor: pointer;
     margin-left: 8px;
     transition: box-shadow 0.15s;
+    vertical-align: top;
   }
 
   .tweet-button:hover {
