--- a/text.html
+++ b/text.html
@@ -40,13 +40,15 @@
         text-align: center;
         padding-top: 16px;
         padding-bottom: 16px;
+        padding-left: 16px;
+        padding-right: 16px;
         margin-bottom: 50px;
     }
 
     .shop-link {
         cursor: pointer;
     }
-    
+
     .shop-link:hover {
         text-decoration: underline;
     }
