--- a/text.html
+++ b/text.html
@@ -1,65 +1,17 @@
-<style>
-    p {
-        font-family: Arial;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    .video-title {
-        font-size: 18px;
-        font-weight: bold;
-        width: 288px;
-        line-height: 24px;
-        margin-bottom: 5px;
-    }
-
-    .video-stats {
-        font-size: 14px;
-        color: rgb(96, 96, 96);
-        margin-bottom: 20px;
-    }
-
-    .video-author {
-        font-size: 14px;
-        color: rgb(96, 96, 96);
-        margin-bottom: 20px;
-    }
-
-    .video-description {
-        font-size: 14px;
-        color: rgb(96, 96, 96);
-        width: 288px;
-        line-height: 20px;
-        margin-bottom: 100px;
-    }
-
-    .apple-text {
-        font-size: 14px;
-        background-color: rgb(226, 65, 64);
-        color: white;
-        text-align: center;
-        padding-top: 16px;
-        padding-bottom: 16px;
-        padding-left: 16px;
-        padding-right: 16px;
-        margin-bottom: 50px;
-    }
-
-    .shop-link {
-        cursor: pointer;
-    }
-
-    .shop-link:hover {
-        text-decoration: underline;
-    }
-</style>
-
-<p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-
-<p class="video-stats">3.4M views &#183; 6 months ago</p>
-
-<p class="video-author">Marques Brownlee &#10003; </p>
-
-<p class="video-description">Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
-
-<p class="apple-text">Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &#62;</span></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital@1&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Text Practice</title>
+    <link rel="stylesheet" href="styles/text.css">
+</head>
+<body>
+    <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+    <p class="video-author">Marques Brownlee &#10003; </p>
+    <p class="video-description">Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
+    <p class="apple-text">Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &#62;</span></p>
+</body>
+</html>
