--- a/website.html
+++ b/website.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>First Website</title>
+  </head>
+  <body></body>
+</html>
+
+
+
+
 <p>
   paragraph of text
 </p>
