--- a/youtube.html
+++ b/youtube.html
@@ -15,7 +15,32 @@
 <body>
     <div class="header">
 
-        <div class="sidebar">sidebar</div>
+        <div class="sidebar">
+            <div class="sidebar-link">
+                <img src="icons/home.svg">
+                <div>Home</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="icons/explore.svg">
+                <div>Explore</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="icons/subscriptions.svg">
+                <div>Subscriptions</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="icons/originals.svg">
+                <div>Originals</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="icons/youtube-music.svg">
+                <div>YouTube Music</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="icons/library.svg">
+                <div>Library</div>
+            </div>
+        </div>
 
         <div class="left-section">
             <img class="hamburger-menu" src="icons/hamburger-menu.svg">
@@ -26,18 +51,29 @@
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
                 <img class="search-icon" src="icons/search.svg">
+                <div class="tooltip">Search</div>
             </button>
             <button class="voice-search-button">
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+                <div class="tooltip">Search with your voice</div>
             </button>
         </div>
 
         <div class="right-section">
-            <img class="upload-icon" src="icons/upload.svg">
-            <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+            <div class="upload-icon-container">
+                <img class="upload-icon" src="icons/upload.svg">
+                <div class="tooltip">Create</div>
+            </div>
+            <div class="youtube-apps-icon-container">
+               <img class="youtube-apps-icon" src="icons/youtube-apps.svg"> 
+               <div class="tooltip">YouTube apps</div>
+            </div>
             <div class="notifications-icon-container">
-                <img class="notifications-icon" src="icons/notifications.svg">
-                <div class="notifications-count">3</div>
+                <div class="notifications-tooltip">
+                    <img class="notifications-icon" src="icons/notifications.svg">
+                    <div class="tooltip">Notifications</div>
+                    <div class="notifications-count">3</div>
+                </div>
             </div>
             <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
         </div>
